<resources>

    <!-- [START] Application Name -->
    <string name="APP_NAME">Atlética Insper</string>
    <!-- [END] Application Name -->

    <!-- [START] Activity titles -->
    <string name="ACT_TITLE_LOGIN">Atlética Insper</string>
    <string name="ACT_TITLE_PRODUCTS_NORMAL">Produtos</string>
    <string name="ACT_TITLE_MANAGE_MENU">Atlética Insper</string>
    <string name="ACT_TITLE_PRODUCTS_ADMIN">Gerenciar Produtos</string>
    <string name="ACT_TITLE_SALES_HISTORY">Histórico de Vendas</string>
    <string name="ACT_TITLE_CASH_FLOW">Controle de Caixa</string>
    <string name="ACT_TITLE_SELL_PRODUCT">Vender Produto</string>
    <!-- [END] Activity titles-->

    <string name="forgotPassword"><a href="https://google.com"><i>Esqueci minha senha</i></a></string>
    <string name="login">Login</string>
    <string name="loading">Carregando</string>
    <string name="DONE">OK</string>
    <string name="loggedAs">Usando como:</string>
    <string name="loggedUsername">Marcelo Franco</string>
    <string name="loggedUsernameNormal">Gustavo Efeiche</string>
    <string name="logout">Logout</string>
    <string name="manageProducts">Gerenciar Produtos</string>
    <string name="viewSalesHistory">Histórico de Vendas</string>
    <string name="viewCashFlow">Controle de Caixa</string>
    <string name="price">Preço</string>

    <!-- [START] Products info -->
    <string name="p1">Boné\nQuantidade em estoque: 5</string>
    <string name="p2">Camiseta\nQuantidade em estoque: 6</string>
    <string name="p3">Samba Canção\nQuantidade em estoque: 7</string>
    <string name="product1Info">Teste\nR$100,00</string>
    <!-- [END] Products info-->

    <!-- [START] Sell product form -->
    <string name="LABEL_Vendedor">Vendedor(a)</string>
    <string name="LABEL_Produto">Produto</string>
    <string name="LABEL_Preço">Preço</string>
    <string name="LABEL_Cancelar">Cancelar</string>
    <string name="LABEL_Confirmar">Confirmar Venda</string>
    <string name="TEST_PRICE">R$20,00</string>
    <string name="TEST_PRODUCT">TESTE</string>
    <string name="LABEL_selectProducts">Selecione um produto:</string>
    <string name="LABEL_Método">Método Pgto.</string>
    <!-- [END] Sell product form -->

    <!-- [START] Manage Products Activity -->
    <string name="addProduct">Adicionar Produto</string>
    <string name="updateProduct">Atualizar Produto</string>
    <string name="remProduct">Remover Produto</string>
    <string name="DEFAULT">DEFAULT</string>
    <!-- [END] Manage Products Activity -->

    <!-- [START] Sell Product Activity -->
    <string name="chooseOption">Escolher</string>
    <string name="ACT_TITLE_LOADING">Carregando...</string>
    <string name="ACT_TITLE_CHANGE_PRODUCT">Modificar Produto</string>
    <string name="selectProductToEdit">Selecione um produto ou</string>
    <string name="ACT_TITLE_ADD_PRODUCT">Adicionar Produto</string>
    <!-- [END] Sell Product Activity -->

    <!-- [START] Add Product Activity -->
    <string name="ADDPRODUCT_FORM_COSTPRICE">Preço de Custo:</string>
    <string name="ADDPRODUCT_FORM_CRITICALQTY">Quantidade Crítica:</string>
    <string name="ADDPRODUCT_FORM_CURRENTQTY">Quantidade a Adicionar:</string>
    <string name="ADDPRODUCT_FORM_NAME">Nome:</string>
    <string name="ADDPRODUCT_FORM_PRICE">Preço Normal:</string>
    <string name="ADDPRODUCT_FORM_PRICEATL">Preço Atleta:</string>
    <string name="ADDPRODUCT_FORM_PRICESOC">Preço Sócio:</string>
    <string name="LABEL_Adicionar">Adicionar</string>
    <!-- [END] Add Product Activity -->

    <!-- [START] Change Product Activity -->
    <string name="CHANGEPRODUCT_FORM_NAME">Novo nome:</string>
    <string name="CHANGEPRODUCT_FORM_CRITICALQTY">Quantidade Crítica:</string>
    <string name="CHANGEPRODUCT_FORM_COSTPRICE">Preço de Custo:</string>
    <string name="CHANGEPRODUCT_FORM_PRICE">Preço Normal:</string>
    <string name="CHANGEPRODUCT_FORM_PRICEATL">Preço Atleta:</string>
    <string name="CHANGEPRODUCT_FORM_PRICESOC">Preço Sócio:</string>
    <string name="modify">Modificar</string>
    <string name="remove">Remover</string>
    <string name="save">Salvar</string>
    <!-- [END] Change Product Activity -->

</resources>
