<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SellProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LABEL_Vendedor"
                android:layout_weight="0.5"
                android:textSize="16pt"/>

            <Spinner android:id="@+id/sellerChooser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView android:id="@+id/LABEL_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LABEL_Produto"
                android:layout_weight="0.5"
                android:textSize="16pt"/>

            <TextView android:id="@+id/FIELD_prodName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/TEST_PRODUCT"
                android:layout_weight="0.5"
                android:textSize="12pt">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView android:id="@+id/LABEL_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LABEL_Preço"
                android:layout_weight="0.5"
                android:textSize="16pt"/>

            <TextView android:id="@+id/FIELD_prodPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/TEST_PRICE"
                android:layout_weight="0.5"
                android:textSize="16pt">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LABEL_Método"
                android:layout_weight="0.5"
                android:textSize="16pt"/>

            <Spinner android:id="@+id/methodChooser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button android:id="@+id/cancelSell"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/LABEL_Cancelar"
                android:layout_weight="0.5"/>

            <Button android:id="@+id/confirmSell"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:text="@string/LABEL_Confirmar">
            </Button>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
