<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.insper.atleticainsper.LoginActivity">

    <ImageView android:id="@id/logoAtletica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="70dp"/>

    <EditText android:id="@id/username"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:background="@color/userInput"
        android:textColor="@color/userInputText"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/logoAtletica"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:hint="Usuário"
        android:inputType="text"/>

    <EditText android:id="@id/password"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:background="@color/userInput"
        android:textColor="@color/userInputText"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="Senha"
        android:inputType="textPassword"
        android:imeActionLabel="@string/DONE"/>

    <TextView android:id="@id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/forgotPassword"
        android:layout_alignRight="@id/password"/>

    <Button android:id="@id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/forgotPassword"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"/>

</RelativeLayout>
